# neural_wavefront

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/: config.yaml  config_small.yaml
notebooks/: train.ipynb
outputs/: test_dataset.npz
scripts/: evaluate.py  generate_data.py  main.py  train.py
src/neural_wavefront/: __init__.py
src/neural_wavefront/models/: resnet.py
src/neural_wavefront/optics/: propagation.py  pupil.py  zernike.py
src/neural_wavefront/training/: metrics.py  trainer.py
src/neural_wavefront/utils/: config.py  visualization.py
tests/: __init__.py  test_zernike.py
